--- a/MFCUdsTestTool/MFCUdsTestTool.vcxproj
+++ b/MFCUdsTestTool/MFCUdsTestTool.vcxproj
@@ -190,24 +190,33 @@
     <ClInclude Include="MFCUdsTestTool.h" />
     <ClInclude Include="MFCUdsTestToolDlg.h" />
     <ClInclude Include="MyEdit.h" />
+    <ClInclude Include="NetworkLayer.h" />
+    <ClInclude Include="NetworkLayerPrivate.h" />
     <ClInclude Include="OpenDevDlg.h" />
+    <ClInclude Include="RdWrData.h" />
+    <ClInclude Include="RdWrDidDlg.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="UdsUtil.h" />
+    <ClInclude Include="UdsClient.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ColoredListCtrl.cpp" />
     <ClCompile Include="MFCUdsTestTool.cpp" />
     <ClCompile Include="MFCUdsTestToolDlg.cpp" />
     <ClCompile Include="MyEdit.cpp" />
+    <ClCompile Include="NetworkLayer.cpp" />
     <ClCompile Include="OpenDevDlg.cpp" />
+    <ClCompile Include="RdWrData.cpp" />
+    <ClCompile Include="RdWrDidDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="UdsClient.cpp" />
     <ClCompile Include="UdsUtil.cpp" />
   </ItemGroup>
   <ItemGroup>
