--- a/MFCUdsTestTool/MFCUdsTestTool.vcxproj
+++ b/MFCUdsTestTool/MFCUdsTestTool.vcxproj
@@ -185,6 +185,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CanCommDlg.h" />
     <ClInclude Include="ColoredListCtrl.h" />
     <ClInclude Include="ControlCAN.h" />
     <ClInclude Include="MFCUdsTestTool.h" />
@@ -193,22 +194,24 @@
     <ClInclude Include="NetworkLayer.h" />
     <ClInclude Include="NetworkLayerPrivate.h" />
     <ClInclude Include="OpenDevDlg.h" />
-    <ClInclude Include="RdWrData.h" />
     <ClInclude Include="RdWrDidDlg.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="UdsCcDlg.h" />
+    <ClInclude Include="UdsConfDlg.h" />
+    <ClInclude Include="UdsDiagDlg.h" />
     <ClInclude Include="UdsUtil.h" />
     <ClInclude Include="UdsClient.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CanCommDlg.cpp" />
     <ClCompile Include="ColoredListCtrl.cpp" />
     <ClCompile Include="MFCUdsTestTool.cpp" />
     <ClCompile Include="MFCUdsTestToolDlg.cpp" />
     <ClCompile Include="MyEdit.cpp" />
     <ClCompile Include="NetworkLayer.cpp" />
     <ClCompile Include="OpenDevDlg.cpp" />
-    <ClCompile Include="RdWrData.cpp" />
     <ClCompile Include="RdWrDidDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -216,13 +219,17 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="UdsCcDlg.cpp" />
     <ClCompile Include="UdsClient.cpp" />
+    <ClCompile Include="UdsConfDlg.cpp" />
+    <ClCompile Include="UdsDiagDlg.cpp" />
     <ClCompile Include="UdsUtil.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MFCUdsTestTool.rc" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
     <None Include="res\MFCUdsTestTool.rc2" />
   </ItemGroup>
   <ItemGroup>
