--- a/MFCUdsTestTool/MFCUdsTestTool.vcxproj.filters
+++ b/MFCUdsTestTool/MFCUdsTestTool.vcxproj.filters
@@ -48,9 +48,6 @@
     <ClInclude Include="ColoredListCtrl.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="RdWrData.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="UdsClient.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -61,6 +58,18 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="RdWrDidDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="UdsDiagDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CanCommDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="UdsCcDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="UdsConfDlg.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -86,9 +95,6 @@
     <ClCompile Include="ColoredListCtrl.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="RdWrData.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="UdsClient.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -96,6 +102,18 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="RdWrDidDlg.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="UdsDiagDlg.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CanCommDlg.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="UdsCcDlg.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="UdsConfDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -108,6 +126,7 @@
     <None Include="res\MFCUdsTestTool.rc2">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\MFCUdsTestTool.ico">
